[package]
name = "jfn-cef"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_cef"
crate-type = ["rlib"]

[features]
default = ["kde-palette"]
kde-palette = []

[dependencies]
parking_lot.workspace = true
cef = { workspace = true }
jfn-color = { path = "../color" }
jfn-config = { path = "../config" }
jfn-input = { path = "../input" }
jfn-jellyfin = { path = "../jellyfin" }
jfn-logging = { path = "../logging" }
jfn-mpv = { path = "../mpv" }
jfn-paths = { path = "../paths" }
jfn-platform-abi = { path = "../platform_abi" }
jfn-playback = { path = "../playback" }
serde_json.workspace = true
slotmap.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[build-dependencies]
gix = { workspace = true }

[lints]
workspace = true
