[package]
name = "jfn-rust"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_rust"
crate-type = ["rlib"]

[[bin]]
name = "jellyfin-desktop"
path = "src/main.rs"

[features]
default = ["kde-palette"]
kde-palette = ["jfn-cef/kde-palette", "jfn-wayland/kde-palette"]

[dependencies]
tracing.workspace = true
jfn-platform-abi = { path = "../platform_abi" }
jfn-cef = { path = "../jfn_cef", default-features = false }
jfn-cli = { path = "../cli" }
jfn-color = { path = "../color" }
jfn-config = { path = "../config" }
jfn-jellyfin = { path = "../jellyfin" }
jfn-logging = { path = "../logging" }
jfn-mpv = { path = "../mpv" }
jfn-paths = { path = "../paths" }
jfn-playback = { path = "../playback" }
jfn-single-instance = { path = "../single_instance" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
jfn-macos = { path = "../macos" }
jfn-macos-sink = { path = "../macos_sink" }

[target.'cfg(target_os = "windows")'.dependencies]
jfn-windows = { path = "../windows" }
jfn-windows-sink = { path = "../windows_sink" }

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3"

[target.'cfg(target_os = "linux")'.dependencies]
jfn-idle-inhibit-linux = { path = "../idle_inhibit_linux" }
jfn-open-url-linux = { path = "../open_url_linux" }
jfn-wayland = { path = "../wayland", default-features = false }
jfn-wlproxy = { path = "../wlproxy" }
jfn-x11 = { path = "../x11" }

[lints]
workspace = true
