[package]
name = "jfn-rust"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_rust"
crate-type = ["rlib"]

[[bin]]
name = "jellyfin-desktop"
path = "src/main.rs"

[features]
default = ["kde-palette"]
kde-palette = ["jfn-cef/kde-palette", "jfn-wayland/kde-palette"]

[dependencies]
tracing.workspace = true
parking_lot.workspace = true
clap = { version = "4", default-features = false, features = ["std", "derive", "error-context"] }
jfn-platform-abi = { path = "../platform_abi" }
jfn-cef = { path = "../jfn_cef", default-features = false }
jfn-color = { path = "../color" }
jfn-config = { path = "../config" }
jfn-jellyfin = { path = "../jellyfin" }
jfn-logging = { path = "../logging" }
jfn-mpv = { path = "../mpv" }
jfn-paths = { path = "../paths" }
jfn-playback = { path = "../playback" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
jfn-macos = { path = "../macos" }
jfn-macos-sink = { path = "../macos_sink" }

[target.'cfg(target_os = "windows")'.dependencies]
jfn-windows = { path = "../windows" }
jfn-windows-sink = { path = "../windows_sink" }
windows-sys = { workspace = true, features = [
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3"
gix = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
jfn-wayland = { path = "../wayland", default-features = false }
jfn-wlproxy = { path = "../wlproxy" }
jfn-x11 = { path = "../x11" }

[lints]
workspace = true
