[package]
name = "jfn-linux-util"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_linux_util"
crate-type = ["rlib"]

[dependencies]
parking_lot.workspace = true

# The whole crate is `#![cfg(target_os = "linux")]`, so it's an empty rlib
# elsewhere and the workspace builds uniformly on every platform.
[target.'cfg(target_os = "linux")'.dependencies]
tracing.workspace = true
zbus.workspace = true

[lints]
workspace = true
