[package]
name = "jfn-linux-util"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_linux_util"
crate-type = ["rlib"]

[dependencies]
parking_lot.workspace = true

# The whole crate is `#![cfg(target_os = "linux")]`, so it's an empty rlib
# elsewhere and the workspace builds uniformly on every platform.
[target.'cfg(target_os = "linux")'.dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive"] }
jfn-input = { path = "../input" }
jfn-platform-abi = { path = "../platform_abi" }
libloading = "0.9"
nix.workspace = true
tracing.workspace = true
xkbcommon = "0.9"
zbus.workspace = true

[lints]
workspace = true
