[package]
name = "jfn-logging"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_logging"
crate-type = ["rlib"]

[dependencies]
parking_lot.workspace = true
tracing.workspace = true
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
    "ansi",
    "registry",
    "env-filter",
] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
libc.workspace = true

[lints]
workspace = true
