[package]
name = "jfn-macos"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "jfn_macos"
crate-type = ["rlib"]

[target.'cfg(target_os = "macos")'.dependencies]
jfn-platform-abi = { path = "../platform_abi" }
cef-dll-sys = { version = "=148.1.0" }
objc2 = "0.6"
objc2-foundation = "0.3"
log = "0.4"
tracing = "0.1"
