[package]
name = "jfn-macos"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_macos"
crate-type = ["rlib"]

[target.'cfg(target_os = "macos")'.dependencies]
jfn-cef = { path = "../jfn_cef" }
jfn-input = { path = "../input" }
jfn-mpv = { path = "../mpv" }
jfn-platform-abi = { path = "../platform_abi" }
jfn-playback = { path = "../playback" }
cef-dll-sys.workspace = true
objc2.workspace = true
objc2-foundation.workspace = true
tracing.workspace = true

[dependencies]
parking_lot.workspace = true

[lints]
workspace = true
