[package]
name = "jfn-menu"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_menu"
crate-type = ["rlib"]

# The whole crate is `#![cfg(target_os = "linux")]`, so it's an empty rlib
# elsewhere and the workspace builds uniformly on every platform.
[target.'cfg(target_os = "linux")'.dependencies]
cosmic-text = "0.12"
tiny-skia = "0.12"

[lints]
workspace = true
