[package]
name = "jfn-mpris"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_mpris"
crate-type = ["rlib"]

[target.'cfg(target_os = "linux")'.dependencies]
jfn-mpv = { path = "../mpv" }
jfn-platform-abi = { path = "../platform_abi" }
jfn-playback = { path = "../playback" }
parking_lot.workspace = true
zbus.workspace = true

[lints]
workspace = true
