[package]
name = "jfn-mpv"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_mpv"
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
parking_lot.workspace = true
jfn-color = { path = "../color" }
libc.workspace = true
tracing.workspace = true

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"

[lints]
workspace = true
