[package]
name = "jfn-open-url-linux"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_open_url_linux"
crate-type = ["rlib"]

# The whole crate is `#![cfg(target_os = "linux")]`, so it's an empty rlib
# elsewhere and the workspace builds uniformly on every platform.
[target.'cfg(target_os = "linux")'.dependencies]
tracing.workspace = true

[lints]
workspace = true
