[package]
name = "jfn-platform-abi"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_platform_abi"
crate-type = ["rlib"]

[dependencies]
cef.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
