[package]
name = "jfn-playback"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_playback"
crate-type = ["rlib"]

[dependencies]
parking_lot.workspace = true
jfn-mpv = { path = "../mpv" }
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
zbus.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[lints]
workspace = true
