[package]
name = "jfn-playback"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_playback"
crate-type = ["rlib"]

[dependencies]
parking_lot.workspace = true
jfn-mpv = { path = "../mpv" }
jfn-platform-abi = { path = "../platform_abi" }
jfn-wake-event = { path = "../wake_event" }
serde_json.workspace = true

[lints]
workspace = true
