[package]
name = "jfn-single-instance"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "jfn_single_instance"
crate-type = ["rlib"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
] }
