[package]
name = "jfn-single-instance"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_single_instance"
crate-type = ["rlib"]

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
] }

[dependencies]
parking_lot.workspace = true

[lints]
workspace = true
