[package]
name = "jfn-wake-event"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "jfn_wake_event"
crate-type = ["rlib"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }
