[package]
name = "jfn-wayland"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_wayland"
crate-type = ["rlib"]

[features]
default = ["kde-palette"]
kde-palette = []

[dependencies]
parking_lot.workspace = true

# The whole crate is `#![cfg(target_os = "linux")]`, so it's an empty rlib
# elsewhere and the workspace builds uniformly on every platform.
[target.'cfg(target_os = "linux")'.dependencies]
jfn-idle-inhibit-linux = { path = "../idle_inhibit_linux" }
jfn-input = { path = "../input" }
jfn-open-url-linux = { path = "../open_url_linux" }
jfn-platform-abi = { path = "../platform_abi" }
jfn-mpv = { path = "../mpv" }
jfn-playback = { path = "../playback" }
jfn-wlproxy = { path = "../wlproxy" }
cef-dll-sys.workspace = true
libc.workspace = true
libloading = "0.9"
memmap2 = "0.9"
tracing.workspace = true
smithay-client-toolkit = { version = "0.20", default-features = false }
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
wayland-scanner = "0.31"
xkbcommon = "0.9"

[lints]
workspace = true
