[package]
name = "jfn-wlproxy"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "jfn_wlproxy"
crate-type = ["rlib"]

[dependencies]
wl-proxy = { git = "https://github.com/andrewrabert/wl-proxy", branch = "server-decoration-palette", features = ["all-protocols"] }
error_reporter = "1.0.0"
log = "0.4"
