[package]
name = "jfn-x11"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_x11"
crate-type = ["rlib"]

[dependencies]
parking_lot.workspace = true

# The whole crate is `#![cfg(target_os = "linux")]`, so it's an empty rlib
# elsewhere and the workspace builds uniformly on every platform.
[target.'cfg(target_os = "linux")'.dependencies]
jfn-idle-inhibit-linux = { path = "../idle_inhibit_linux" }
jfn-input = { path = "../input" }
jfn-mpv = { path = "../mpv" }
jfn-open-url-linux = { path = "../open_url_linux" }
jfn-platform-abi = { path = "../platform_abi" }
jfn-playback = { path = "../playback" }
libc.workspace = true
xcb = { version = "1.7", features = ["shm", "shape", "xkb", "as-raw-xcb-connection"] }
xcb-util-cursor-sys = "0.2"
xkbcommon = { version = "0.9", default-features = false, features = ["x11"] }

[lints]
workspace = true
