[package]
name = "jfn-x11"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_x11"
crate-type = ["rlib"]

[dependencies]
parking_lot.workspace = true

# The whole crate is `#![cfg(target_os = "linux")]`, so it's an empty rlib
# elsewhere and the workspace builds uniformly on every platform.
[target.'cfg(target_os = "linux")'.dependencies]
cef.workspace = true
cursor-icon = "1"
jfn-compositor-core = { path = "../compositor_core" }
jfn-gpu-paint = { path = "../gpu_paint" }
jfn-input = { path = "../input" }
jfn-linux-util = { path = "../linux_util" }
jfn-menu = { path = "../menu" }
jfn-mpris = { path = "../mpris" }
jfn-mpv = { path = "../mpv" }
jfn-platform-abi = { path = "../platform_abi" }
jfn-playback = { path = "../playback" }
jfn-wake-event = { path = "../wake_event" }
libc.workspace = true
nix.workspace = true
tracing.workspace = true
xcb = { version = "1.7", features = ["xkb", "as-raw-xcb-connection"] }
x11rb = { version = "0.14", features = ["cursor", "resource_manager", "shape", "shm", "xfixes"] }
xkbcommon = { version = "0.9", default-features = false, features = ["x11"] }

[lints]
workspace = true
