[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
regex = "1"
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }
