[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cargo-lock = "11"
clap = { version = "4", features = ["derive", "env"] }
download-cef = "2.3"
flate2 = "1"
gix = { workspace = true }
tempfile = "3"
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }

[lints]
workspace = true
